--- a/package.json
+++ b/package.json
@@ -1,21 +1,50 @@
 {
-  "name": "hi-guys",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~46.0.16",
+    "@expo/config-plugins": "^5.0.0",
+    "@expo/prebuild-config": "^5.0.1",
+    "@react-native-community/cli": "^9.2.1",
+    "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-navigation/material-top-tabs": "^6.0.6",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "expo": "^47.0.0",
+    "expo-asset": "~8.6.1",
+    "expo-cli": "^6.0.6",
+    "expo-constants": "~13.2.4",
+    "expo-contacts": "~10.3.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-module-scripts": "^2.1.1",
+    "expo-modules-autolinking": "~0.10.1",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "firebase": "9.6.11",
+    "nanoid": "^3.1.30",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-viewing": "^0.2.1",
+    "react-native-pager-view": "5.4.24",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
-  "private": true
+  "private": true,
+  "name": "hi-guys",
+  "version": "1.0.0"
 }
