--- a/package.json
+++ b/package.json
@@ -7,38 +7,39 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/config-plugins": "^5.0.0",
-    "@expo/prebuild-config": "^5.0.1",
-    "@react-native-community/cli": "^9.2.1",
-    "@react-native-masked-view/masked-view": "0.2.7",
-    "@react-navigation/material-top-tabs": "^6.0.6",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
-    "expo": "^47.0.0",
-    "expo-asset": "~8.6.1",
-    "expo-cli": "^6.0.6",
-    "expo-constants": "~13.2.4",
-    "expo-contacts": "~10.3.0",
-    "expo-image-picker": "~13.3.1",
+    "@expo/config-plugins": "^5.0.2",
+    "@expo/prebuild-config": "^5.0.5",
+    "@react-native-community/cli": "^9.3.2",
+    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-navigation/material-top-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
+    "expo": "^47.0.13",
+    "expo-ads-admob": "^13.0.0",
+    "expo-asset": "~8.7.0",
+    "expo-cli": "^6.1.0",
+    "expo-constants": "~14.0.2",
+    "expo-contacts": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-module-scripts": "^2.1.1",
-    "expo-modules-autolinking": "~0.10.1",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.6",
-    "firebase": "9.6.11",
-    "nanoid": "^3.1.30",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "expo-modules-autolinking": "~1.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "firebase": "^9.6.11",
+    "nanoid": "^3.3.4",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-easy-grid": "^0.2.2",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-image-viewing": "^0.2.1",
-    "react-native-pager-view": "5.4.24",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-tab-view": "^3.1.1",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-pager-view": "6.0.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
